@@ -15,6 +15,7 @@
 - Compat takes great care to remove unneeded definitions at compile time. On
   recent Emacs 29 the byte compiled files are empty and not loaded, such that
   Compat does not any cost to the Emacs process.
+- compat-26: Fix and test ~image-property~ setter.
 - compat-28: Fix and test ~with-existing-directory~.
 - compat-29: Drop broken functions ~string-pixel-width~ and
   ~buffer-text-pixel-size~. These functions had poor performance which lead to a
